# acid4sigmas-model

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  secrets.rs
src/db/: mod.rs
src/macros/: mod.rs
src/models/: auth.rs  db.rs  email_client.rs  mod.rs  redis.rs  totp.rs
src/models/api/: users.rs
src/utils/: deserializer.rs  email_client.rs  hasher.rs  jwt.rs  mod.rs  query_builder.rs  redis.rs  timer.rs  token_handler.rs  totp.rs  util.rs  ws.rs
src/validation/: auth.rs  db.rs  mod.rs
