[package]
name = "acid4sigmas-models"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres"] }
acid4sigmas-attr = { git = "https://github.com/acid4sigmas/acid4sigmas-attr.git" }
anyhow = "1.0.90"
jsonwebtoken = "9.3.0"
actix-web = "4.9.0"
rand = "0.8.5"
bcrypt = "0.15.1"
lazy_static = "1.5.0"
toml = "0.8.19"
once_cell = "1.20.2"
colored = "2.1.0"
async-trait = "0.1.83"
tokio = { version = "1.41.0", features = ["sync", "net", "rt"] }
tokio-tungstenite =  { version = "*", features = ["tls"] }
futures-util = "0.3.31"
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
lettre = "0.11.10"
redis = {version = "0.27.4", features = ["aio", "tokio-comp"] }
totp-rs = "5.6.0"
